--- a/_talks/2019-03-01-talk-2.md
+++ b/_talks/2019-03-01-talk-2.md
@@ -8,4 +8,4 @@ date: 2019-03-01
 location: "Orlando, FL, USA"
 ---
 
-[More information here](Ether-based electrolytes have become promising candidates for sodium rechargeable batteries due to their chemical stability. The salt concentration of the electrolytes has a huge impact on the battery performance, because the viscosity of the electrolyte will increase as well as ion-pairing effects with the increased salt concentration. However, the ion-pairing can change the reaction products and hence affect battery performance. Experiments have also shown that the conductivities of these electrolytes increase as a function of concentration. To fully understand these electrolytes at a molecular level, the solvation and charge transport dynamics of glyme based electrolytes with the sodium triflate salt at different concentrations were investigated using molecular dynamics simulations. Two different mechanisms were found through our simulations for the charge transport, namely a traditional vehicular mechanism based on the free ion diffusion and a hopping mechanism involving the triflate anion. )
+Ether-based electrolytes have become promising candidates for sodium rechargeable batteries due to their chemical stability. The salt concentration of the electrolytes has a huge impact on the battery performance, because the viscosity of the electrolyte will increase as well as ion-pairing effects with the increased salt concentration. However, the ion-pairing can change the reaction products and hence affect battery performance. Experiments have also shown that the conductivities of these electrolytes increase as a function of concentration. To fully understand these electrolytes at a molecular level, the solvation and charge transport dynamics of glyme based electrolytes with the sodium triflate salt at different concentrations were investigated using molecular dynamics simulations. Two different mechanisms were found through our simulations for the charge transport, namely a traditional vehicular mechanism based on the free ion diffusion and a hopping mechanism involving the triflate anion. 
