change pic links

--- a/_posts/2018-03-20-blog-post-1.md
+++ b/_posts/2018-03-20-blog-post-1.md
@@ -11,9 +11,9 @@ tags:
 I met one of my best friends in New Orleans, how nice is that!!!
 First time attend the ACS meeting, amazing experimence!
 
-![in front of my poster](https://github.com/like201707/like201707.github.io/tree/master/images/ACS_Orleans/IMG_3261.JPG=250x250)
+![in front of my poster](https://i.loli.net/2020/06/10/yo5HtciIXzWvOsx.png)
 
 
-![Zhicheng just finished his talk][https://github.com/like201707/like201707.github.io/tree/master/images/ACS_Orleans/IMG_3263.JPG=250x250]
+![He just finished his talk](https://sm.ms/image/kHvLWXqQpVcyr2P)
 
 
