--- a/_posts/2018-03-20-blog-post-1.md
+++ b/_posts/2018-03-20-blog-post-1.md
@@ -14,6 +14,6 @@ First time attend the ACS meeting, amazing experimence!
 ![in front of my poster](https://i.loli.net/2020/06/10/yo5HtciIXzWvOsx.png)
 
 
-![He just finished his talk](https://sm.ms/image/kHvLWXqQpVcyr2P.png)
+![He just finished his talk](https://i.loli.net/2020/06/10/kHvLWXqQpVcyr2P.png)
 
 
