--- a/_posts/2018-03-20-blog-post-1.md
+++ b/_posts/2018-03-20-blog-post-1.md
@@ -3,9 +3,9 @@ title: 'ACS Meeting in New Orleans'
 date: 2018-03-20
 permalink: /posts/2018/03/blog-post-1/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - New Orleans ACS
+  - Zhicheng Jin
+  - Reuion
 ---
 
 I met one of my best friends in New Orleans, how nice is that!!!
