--- a/_posts/2020-06-10-blog-post-4.md
+++ b/_posts/2020-06-10-blog-post-4.md
@@ -18,7 +18,7 @@ tags:
 
 ​	**command [-option] [parameter]**
 
-####<2> regular arguments
+#### <2> regular arguments
 
 - **ls**
   - ls -a -l - t -h
@@ -68,7 +68,7 @@ tags:
 - **echo**
 - **\>**  (cover)
 - **\>>**  (append)
-- **|** (pipe)
+- **<code>&#124;</code>** (pipe)
 - **shutdown**
   - shutdown -r now (-r means reboot)
   - shutdown -h now/20:25/+10
@@ -102,7 +102,7 @@ tags:
 - **.** current directory
 - **..** parent directory
 
-####<3> help command
+#### <3> help command
 
 - **command —help**
 - **man command**
@@ -129,7 +129,7 @@ tags:
   - su username
 - **sudo -s**
 - group
-  - cat /etc/group | grep sudo 
+  - cat /etc/group <code>&#124;</code> grep sudo 
   - groupmod 
   - groupadd \<groupname>
   - groupdel \<groupname>
@@ -149,7 +149,7 @@ tags:
 - **chown and chgrp**
   - chown/chgrp username/groupname file
 
-###1.5 Linux file transfer
+### 1.5 Linux file transfer
 
 - **ftp (File Transfer Protocol)**
 - **ssh and scp**
