--- a/_posts/2020-06-10-blog-post-4.md
+++ b/_posts/2020-06-10-blog-post-4.md
@@ -9,7 +9,17 @@ tags:
 ---
 
 # My linux learning notes.
+[1. Linux Basics](#1-linux-basics)
 
+* [1.1 command line](#11-command-line)
+  + [<1> command line format](#-1--command-line-format)
+* [1.2 wildcard character](#12-wildcard-character)
+* [1.3 User Management](#13-user-management)
+* [1.4 File permission](#14-file-permission)
+* [1.6 Advanced linux command](#16-advanced-linux-command)
+  + [<1> awk](#-1--awk)
+  + [<2> sed](#-2--sed)
+* [1.7 Vim](#17-vim)
 ## 1. Linux Basics
 
 ### 1.1 command line 
