--- a/_talks/2020-03-20-talk-4.md
+++ b/_talks/2020-03-20-talk-4.md
@@ -9,3 +9,5 @@ location: "Philadelphia, PA, USA"
 ---
 
 Solid ion-conducting polymer electrolytes are central components to many electrochemical devices such as batteries, fuel cells, sensors, electrolyzers, and water purification units. Polymer electrolytes can either be block copolymer electrolytes (BCEs)  or random copolymer electrolytes (RCEs). Experiments have shown that BCEs continually demonstrate higher ionic conductivity over their random copolymer counterparts. In order to gain the underlying molecular insight for this charge transport behavior, we have carried out all atom molecular dynamics simulations in order to investigate the solvation structure and charge transport dynamics of different kinds of copolymer electrolytes. The results from our simulation on counterion condensation, ion migration as well as the water motion revealed that the BCEs display good ion migration due to ion hopping along the chain that is possibly mediated by less restricted water.
+
+[![Audi R8](http://img.youtube.com/vi/KOxbO0EI4MA/0.jpg)](https://www.youtube.com/watch?v=KOxbO0EI4MA "Audi R8")
